// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new config when no .babelrc found 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/utils/fixRequireIssues.js",
    "<<NODE_MODULE>>/react-hot-loader/babel.js",
    "<<REPLACED>>/hot/babelPlugin.js",
  ],
  "presets": Array [
    "<<NODE_MODULE>>/babel-preset-react-native/index.js",
  ],
}
`;

exports[`does not include "hot" plugins in production 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/utils/fixRequireIssues.js",
  ],
  "presets": Array [
    "<<NODE_MODULE>>/babel-preset-react-native/index.js",
  ],
}
`;
